--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="logo.png">
+  <title>CraftTune</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8036493329313069"
+     crossorigin="anonymous"></script>
+</head>
+<body>
 
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="logo.png" alt="CraftTune Logo">
+        <h1>CraftTune</h1>
+      </div>
+      <div class="nav-links">
+        <a href="index.html">Startseite</a>
+        <a href="about-us.html">Über uns</a>
+        <a href="kontakt.html">Kontakt</a>
+        <a href="impressum.html">Impressum</a>
+      </div>
+      <div class="toggle-switch">
+        <input type="checkbox" id="customer-toggle">
+        <label class="toggle-switch-label" for="customer-toggle"></label>
+      </div>
+  </nav>
+  </header>
+
+  <main class="craftsman-boxes" id="craftsman-box-container">
+
+  </main>
+
+<section class="faq-section">
+  <h2>Häufig gestellte Fragen</h2>
+  <div class="faq-item">
+    <h3>Wie füge ich eine neue Firma hinzu?</h3>
+    <p>Um eine neue Firma hinzuzufügen, klicken Sie einfach auf den "Firma anlegen" Button oben rechts auf der Seite und geben Sie die erforderlichen Informationen ein.</p>
+  </div>
+  <div class="faq-item">
+    <h3>Wie kann ich nach Handwerkern suchen?</h3>
+    <p>Sie können nach Handwerkern suchen, indem Sie entweder eine Kategorie im Dropdown-Menü auswählen oder den Suchbegriff in das Suchfeld eingeben und auf die Suchschaltfläche klicken.</p>
+  </div>
+  <!-- Weitere FAQ-Einträge hier -->
+</section>
+  
+  <iframe src="https://www.google.com/maps/d/embed?mid=1mznQIC2SCHjfI3aLkiuPVWHyx6Av4U4&ehbc=2E312F" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <footer>
+    <p>&copy; 2024 CraftTune. Alle Rechte vorbehalten.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
