--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="logo.png">
-  <title>CraftTune</title>
+  <title>HENT Transporte Eger & Co KG</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8036493329313069"
      crossorigin="anonymous"></script>
 </head>
@@ -18,10 +18,10 @@
         <h1>CraftTune</h1>
       </div>
       <div class="nav-links">
-        <a href="index.html">Startseite</a>
-        <a href="about-us.html">Über uns</a>
-        <a href="kontakt.html">Kontakt</a>
-        <a href="impressum.html">Impressum</a>
+        <a href="index.html">Home</a>
+        <a href="about-us.html">Leistungen</a>
+        <a href="kontakt.html">Fuhrpark</a>
+        <a href="impressum.html">Kontakt</a>
       </div>
       <div class="toggle-switch">
         <input type="checkbox" id="customer-toggle">
