--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
   </header>
 
   <main class="craftsman-boxes" id="craftsman-box-container">
+    <section>
+        <div>
+            <p>HENT Transporte GmbH & Co KG steht seit über 30 Jahren als zertifizierter Entsorgungsfachbetrieb für Kompetenz und Leistung in den Bereichen Baustofftransporte, Tiefladertransporte und Containerdienst.</p>
 
+            <p>Unsere Fahrzeuge sind vorwiegend im Raum Dresden und Pirna eingesetzt. Durch unseren modernen Fuhrpark werden wir allen individuellen Anforderungen gerecht.</p>
+
+            <p>Kurzfristig und unkonventionell erlaubt es unser vorhandenes Potential an Transport- und Baufahrzeugen auf Ihre Wünsche zu reagieren. Egal ob 2-Achser, 3-Achser, oder 4-Achser - durch unseren großen Fuhrpark werden auch umfangreiche Transporteinsätze schnellstens realisiert.</p>
+        </div>
+    </section>
   </main>
 
 <section class="faq-section">
@@ -46,11 +54,10 @@
   </div>
   <!-- Weitere FAQ-Einträge hier -->
 </section>
-  
-  <iframe src="https://www.google.com/maps/d/embed?mid=1mznQIC2SCHjfI3aLkiuPVWHyx6Av4U4&ehbc=2E312F" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <footer>
     <p>&copy; 2024 CraftTune. Alle Rechte vorbehalten.</p>
+    <p>Kontakt/Impressung</p>
   </footer>
 
   <script src="script.js"></script>
